backend/k8s/22-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: sans-limite
spec:
  selector:
    app: api
  ports:
    - port: 3001
      targetPort: 3001
